[package]
name = "micropython-fuse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"
libc = "0.2.105"
log = "0.4.14"
pretty_env_logger = "0.4.0"
quick-error = "2.0.1"
serialport = "4.0.1"
termion = "1.5.6"
time = "0.1"
